force-app/main/default/objects/Coupon__c/fields/Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount__c</fullName>
    <label>Flat Discount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>