force-app/main/default/objects/Coupon__c/fields/RemainingQuantity__c.field-meta.xml
<CustomField>
    <fullName>RemainingQuantity__c</fullName>
    <inlineHelpText>Total no ofdiscountcouponsavailble</inlineHelpText>
    <label>RemainingQuantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>