force-app/main/default/objects/Coupon__c/validationRules/Expiry_Date_Should_be_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date_Should_be_Greater_Than_Today</fullName>
    <active>false</active>
    <errorConditionFormula>Expiry_Date__c   &lt;=  TODAY()</errorConditionFormula>
    <errorMessage>Expiry Date Should be Greater Than Today</errorMessage>
</ValidationRule>