force-app/main/default/objects/Coupon__c/validationRules/If_Type_Flat_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Type_Flat_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Type__c, &quot;Flat&quot;), 
    IF(ISBLANK(Flat_Discount__c), true, false),
    false
)</errorConditionFormula>
    <errorDisplayField>Flat_Discount__c</errorDisplayField>
    <errorMessage>If the type is flat this field must be filled.</errorMessage>
</ValidationRule>