force-app/main/default/objects/Coupon__c/validationRules/If_Type_Percentage_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Type_Percentage_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Type__c, &quot;Percentage&quot;), 
    IF(ISBLANK( Discount__c), true, false),
    false
)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>If the type is percentage the discount field must be filled</errorMessage>
</ValidationRule>