force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Expired__c</columns>
    <columns>Type__c</columns>
    <columns>Flat_Discount__c</columns>
    <columns>Discount__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>RemainingQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>